ecmascript/parser/tests/typescript-errors/tsc/async/es5/asyncArrowFunction/asyncArrowFunction9_es5/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/async/es5/asyncArrowFunction/asyncArrowFunction9_es5/input.ts:4:31
  |
4 | var foo = async (a = await => await): Promise<void> => {
  |                               ^^^^^

